--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   </style>
 </head>
 <body>
-  <h1>Classement Express</h1>
+  <h1>Classement Express caca</h1>
   <p id="gameDate" class="subtext"></p>
   <button id="debugResetBtn">🔧 Rejouer (debug)</button>
 
